# costar_plan

./: .gitignore  .travis.yml  .travis.yml.original  Description.md  LICENSE  LICENSE.md  Readme.md  Tests.md  docker_instructions.md  package.xml  setup.py  tests.sh
costar_gazebo_plugins/: CMakeLists.txt  README.md  package.xml
costar_gazebo_plugins/include/costar_gazebo_plugins/: gazebo_ros_moveit_planning_scene.h
costar_gazebo_plugins/src/: gazebo_ros_moveit_planning_scene.cpp
costar_planning_interface/: CMakeLists.txt  package.xml  setup.py
costar_planning_interface/cpp/: align_test_node.cpp  collision_map.cpp  costar_planner.cpp  instantiated_skill.cpp  planning_interface_wrapper.cpp  predicate.cpp  simple_test_node.cpp  task_model.cpp  training_features.cpp  visualize.cpp  wam_training_features.cpp
costar_planning_interface/cpp/test/: cart_dmp_execution_test_node.cpp  dmp_execution_test_node.cpp  dmp_generation_test.cpp  trajectory_generation_test.cpp
costar_planning_interface/cpp/traj/: dmp_trajectory_distribution.cpp  trajectory_distribution.cpp
costar_planning_interface/cpp/utils/: params.cpp
costar_planning_interface/cpp/wam/: input.cpp
costar_planning_interface/include/costar_task_plan/: costar_planner.h  features.h  planning_interface_wrapper.h  predicate.h  robot_kinematics.h  test_features.h  training_features.h  visualize.h  wam_training_features.h
costar_planning_interface/include/costar_task_plan/utils/: commander.h  python.hpp
costar_planning_interface/python/costar_planning_interface/: __init__.py  interface.py
costar_simulation/robot/create_description/: package.xml
costar_simulation/robot/create_description/cmake/: create_descriptionConfig.cmake
costar_simulation/robot/create_description/meshes/: create_body.dae
costar_simulation/robot/create_description/urdf/: create.urdf.xacro  create_gazebo.urdf.xacro
costar_simulation/robot/jaco_description/: CMakeLists.txt  README.ModelChanges.md  README.MoveIt.md  README.md  package.xml  transformURDF.sh
costar_simulation/robot/jaco_description/launch/: jaco_gazebo.launch  jaco_standalone_gazebo.launch  test_two_arms.launch
costar_simulation/robot/jaco_description/urdf/: jaco.urdf.xacro  jaco_joint_control.xacro  jaco_joint_control_vel.xacro  jaco_robot.urdf.xacro  jaco_robot_multi.urdf.xacro
costar_task_plan/: CMakeLists.txt  design.md  install.sh  package.xml  setup.py  tests.md
costar_task_plan/cpp/: align_test_node.cpp  collision_map.cpp  costar_planner.cpp  features.cpp  grid_planner.cpp  gripper.cpp  instantiated_skill.cpp  instantiated_skill_init.cpp  predicate.cpp  robot_kinematics.cpp  simple_test_node.cpp  skill.cpp  task_model.cpp  task_test_node.cpp  test_features.cpp  training_features.cpp  visualize.cpp  wam_training_features.cpp
costar_task_plan/cpp/auto/: load_wam_skills_auto_data.hpp  task_test_auto_data.cpp
costar_task_plan/cpp/test/: cart_dmp_execution_test_node.cpp  costar_plan_node.cpp  dmp_execution_test_node.cpp  dmp_generation_test.cpp  execution_test_node.cpp  feature_computation_test.cpp  grid_plan_node.cpp  moveit_robot_test.cpp  training_test_node.cpp  trajectory_generation_test.cpp
costar_task_plan/cpp/traj/: cart_dmp_trajectory_distribution.cpp  dmp_trajectory_distribution.cpp  trajectory_distribution.cpp
costar_task_plan/cpp/utils/: commander.cpp  params.cpp
costar_task_plan/cpp/wam/: input.cpp  load_wam_skills.hpp
costar_task_plan/data/tom/: skills.yml
costar_task_plan/data/tom/feature_models/: box_gmm.yml  move_gmm.yml  pickup_gmm.yml  test_gmm.yml  trash_gmm.yml
costar_task_plan/data/tom/skill_models/: box00.yml  box01.yml  box02.yml  box03.yml  box04.yml  box05.yml  move00.yml  move01.yml  move02.yml  move03.yml  move04.yml  move05.yml  move06.yml  move07.yml  move08.yml  move09.yml  (+32 more)
costar_task_plan/doc/: add_a_robot.md
costar_task_plan/include/costar_task_plan/: cart_dmp_trajectory_distribution.h  collision_map.h  costar_planner.h  dmp_trajectory_distribution.h  features.h  float_features.h  gripper.h  instantiated_skill.h  robot_kinematics.h  skill.h  task_model.h  task_server.h  test_features.h  training_features.h  trajectory.h  trajectory_distribution.h  visualize.h  wam_training_features.h
costar_task_plan/include/tts/: collision_map.h  dmp_trajectory_distribution.h  features.h  goal.h  grid_planner.h  gripper.h  instantiated_skill.h  option.h  predicate.h  skill.h  task_server.h  test_features.h  trajectory.h  trajectory_distribution.h  wam_training_features.h
costar_task_plan/launch/: iiwa.launch  oranges.launch  tom.launch
costar_task_plan/launch/moveit_conf/: tom_sim_controllers.yml
costar_task_plan/launch/rviz_conf/: tom_robot.rviz
costar_task_plan/python/: .task_tree_search.swo  setup.py
costar_task_plan/python/costar_task_plan/: __init__.py
costar_task_plan/scripts/: collect_blocks_data.py  create_training_data.py  discrete_reinforce_test.py  learn_regression_model.py  learn_simple.py  learn_two_layer_nn.py  reinforce_test.py  simple_q_learning.py
costar_task_plan/scripts/box2d/: lander_continuous_test.py
costar_task_plan/scripts/grid_world/: crossworld.py  feature_generation_test.py  four_lane.py  generate_crossworld_test.py  local_map_test.py  play_random_crossworld.py  random_crossworld.py
costar_task_plan/scripts/keras/: deep_dream.py  gradients.py  keras_autoencoder.py  keras_cnn.py  keras_mnist_mlp_gan.py  keras_time_distributed.py  lstm_nietzche_test.py
costar_task_plan/scripts/needle_master/: generate_trajectories.py  test.py
costar_task_plan/scripts/tensorflow/: mnist.py
costar_task_plan/tests/: analyze_robot_multi_data.py  cem_test.py  function_cem_test.py  function_reinforce_test.py  mnist_gan_test.py  sampler_test.py  task_test.py
costar_task_plan/tests/tom_test_util/: publish_oranges.py
ontology_msgs/: CMakeLists.txt  README.md  package.xml
ontology_msgs/msg/: Activity.msg  DebugVRLearning.msg  DisplayLabel.msg  Graph.msg  GraphNode.msg  GraphUpdate.msg  HandUpdate.msg  ObjUpdate.msg  ObjectData.msg  OntoPropertyList.msg  PropertyChanged.msg  SimulationStateChange.msg
(+1059 files in other folders)
