<?xml version="1.0"?>
<package>
  <name>costar_task_plan</name>
  <version>0.0.0</version>
  <description>The costar_task_plan package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="chris@todo.todo">chris</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ltl_tree_search</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>costar_plan_msgs</build_depend>
  <run_depend>costar_plan_msgs</run_depend>

  <build_depend>rosbag</build_depend>
  <build_depend>dmp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>

  <run_depend>dmp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
