<?xml version="1.0"?>
<package>
  <name>jaco_description</name>
  <version>0.0.0</version>
  <description>URDF files for the Kinova Jaco arm</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/jaco_description</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
